force-app/main/default/objects/Asset/fields/Annual_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Unit_Price__c</fullName>
    <description>Annual unit price for this asset</description>
    <label>Annual Unit Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>