force-app/main/default/objects/Asset/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>CASE(Product2.Family,
    &apos;Software Subscriptions&apos;, Price * Quantity,
    &apos;Recurring Services&apos;, Price * Quantity,
    &apos;CPUh - PAYG&apos;, Price * Quantity,
    &apos;Sample-based&apos;, Price * Quantity,
    &apos;CPUh - PAYG&apos;,0,
    &apos;Professional Service&apos;,0,
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>