force-app/main/default/objects/Asset/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Exchange rate for USD conversion - inherited from related OpportunityLineItem at Asset creation to maintain consistent rates across revenue lifecycle. Used to calculate USD conversion fields for Contract rollups.</description>
    <inlineHelpText>Exchange rate used for USD conversion calculations. This field is populated automatically from the related Opportunity Line Item when the Asset is created.</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>