force-app/main/default/objects/Asset/fields/Exclude_from_Status_Updates__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Status_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, excludes this asset from daily batch status updates and contract revenue rollups. Use for manual revenue management or when asset should not affect automated contract calculations.</description>
    <inlineHelpText>Check this box to exclude this asset from automated daily status updates and revenue rollups to contracts. The asset will be ignored in contract-level calculations.</inlineHelpText>
    <label>Exclude from Status Updates</label>
    <type>Checkbox</type>
</CustomField>