force-app/main/default/objects/Asset/fields/Include_in_ARR_Override__c.field-meta.xml
<CustomField>
    <fullName>Include_in_ARR_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override flag for including this asset in ARR calculations</description>
    <label>Include in ARR Override</label>
    <type>Checkbox</type>
</CustomField>