force-app/main/default/objects/Asset/fields/Include_in_ARR_Sum__c.field-meta.xml
<CustomField>
    <fullName>Include_in_ARR_Sum__c</fullName>
    <description>Flag indicating if this asset should be included in ARR sum calculations</description>
    <label>Include in ARR Sum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>