force-app/main/default/objects/Asset/fields/MRR_USD__c.field-meta.xml
<CustomField>
    <fullName>MRR_USD__c</fullName>
    <description>MRR converted to USD using locked exchange rate - provides consistent USD reporting for Assets regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(MRR__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MRR converted to USD using the locked exchange rate inherited from Opportunity Line Item. Updates automatically when exchange rate or MRR changes.</inlineHelpText>
    <label>MRR (USD)</label>
    <type>Text</type>
</CustomField>