force-app/main/default/objects/Asset/fields/Originating_OLI__c.field-meta.xml
<CustomField>
    <fullName>Originating_OLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the original Opportunity Line Item that created this asset</description>
    <label>Originating OLI</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Created Assets</relationshipLabel>
    <relationshipName>Originating_OLI</relationshipName>
    <type>Lookup</type>
</CustomField>