force-app/main/default/objects/Asset/fields/Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Price_USD__c</fullName>
    <description>Price converted to USD using locked exchange rate - provides consistent USD reporting for Assets regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    "$" + TEXT(ROUND(Price / Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price converted to USD using the locked exchange rate inherited from Opportunity Line Item. Updates automatically when exchange rate or Price changes.</inlineHelpText>
    <label>Price (USD)</label>
    <type>Text</type>
</CustomField>