force-app/main/default/objects/Asset/fields/Price_USD_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Price_USD_Reporting__c</fullName>
    <description>USD value in Number format for SFDC reporting and aggregation</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
NULL, 
ROUND(Price / Exchange_Rate__c, 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field contains the same USD value as Price USD but in Number format to enable Salesforce reporting, rollups, and calculations.</inlineHelpText>
    <label>Price (Reporting)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>