force-app/main/default/objects/Asset/fields/Prorated_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Unit_Price__c</fullName>
    <description>Prorated unit price for this asset based on term dates</description>
    <label>Prorated Unit Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>