force-app/main/default/objects/Asset/fields/Total_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_USD__c</fullName>
    <description>Total Value converted to USD using locked exchange rate - provides consistent USD reporting for Assets regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(Total_Value__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Value converted to USD using the locked exchange rate inherited from Opportunity Line Item. Updates automatically when exchange rate or total value changes.</inlineHelpText>
    <label>Total Value (USD)</label>
    <type>Text</type>
</CustomField>