force-app/main/default/objects/Asset/fields/Unit_ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>Unit_ARR_USD__c</fullName>
    <description>Unit ARR converted to USD using locked exchange rate - provides consistent USD reporting for Assets regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(Unit_ARR__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit ARR converted to USD using the locked exchange rate inherited from Opportunity Line Item. Updates automatically when exchange rate or unit ARR changes.</inlineHelpText>
    <label>Unit ARR (USD)</label>
    <type>Text</type>
</CustomField>