force-app/main/default/objects/Asset/fields/Unit_MRR_USD__c.field-meta.xml
<CustomField>
    <fullName>Unit_MRR_USD__c</fullName>
    <description>Unit MRR converted to USD using locked exchange rate - provides consistent USD reporting for Assets regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    "$" + TEXT(ROUND(Unit_MRR__c / Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit MRR converted to USD using the locked exchange rate inherited from Opportunity Line Item. Updates automatically when exchange rate or Unit MRR changes.</inlineHelpText>
    <label>Unit MRR (USD)</label>
    <type>Text</type>
</CustomField>