force-app/main/default/objects/Asset/fields/Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>Unit_Value__c</fullName>
    <formula>IF(ISPICKVAL(Product2.Family,&quot;Professional Service&quot;),( Total_Price__c ), (Price / 12) *  Term_Length_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>