force-app/main/default/objects/Asset/fields/Unit_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Unit_Value_USD__c</fullName>
    <description>Unit Value converted to USD using locked exchange rate - provides consistent USD reporting for Assets regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    "$" + TEXT(ROUND(Unit_Value__c / Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Value converted to USD using the locked exchange rate inherited from Opportunity Line Item. Updates automatically when exchange rate or Unit Value changes.</inlineHelpText>
    <label>Unit Value (USD)</label>
    <type>Text</type>
</CustomField>